Tue Oct 28 19:30:05 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_delete_revs): Restore code which passes rev2 to
	RCS_getbranchpoint if rev1 is NULL; it still makes sense for the
	non-trunk case.  Fixes admin-22-o22 in testsuite.

	* sanity.sh (admin-18): Adjust to reflect "rcs failed" no longer
	being suppressed by global -q option.

	* rcs.c (RCS_delete_revs): If rev1 == NULL and rev2 is on the
	trunk, handle it the same way we do everything else--by swapping
	the two.  This replaces the code which tried to kludge what we
	passed to RCS_getbranchpoint (which didn't work).
	* sanity.sh (binfiles2-o1 to binfiles2-o4): New tests, for this fix.
	* admin.c (admin_fileproc): Don't have -q global option suppress
	"rcs failed" message.

1997-10-28  Jim Kingdon

	* log.c (printlock_proc), rcs.c (putlock_proc): Prototype.
	* rcs.c (rcs_internal_lockfile): Only try to call fchmod if
	HAVE_FCHMOD is defined.

Tue Oct 28 10:27:03 1997  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c	(RCS_deltas): Don't use \? in string if __STDC__ is not
	defined.

	* rcs.c (make_file_label): Remove extraneous `+'.

Mon Oct 27 14:40:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* status.c (status): Don't pass SEND_NO_CONTENTS to send_files.

Sat Oct 25 00:33:57 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_delete_revs): Use : not - for range in error message.

	* rcs.h: Add comment about '\0' in RCS fields.

	* rcs.c (getdelta): Add comment about branches and next field
	being mandatory.

	* rcs.c (RCS_reparsercsfile, RCS_deltas), sanity.sh (reserved):
	Reindent sections which were misindented as a result of recent
	changes.

Fri Oct 24 10:22:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_findlock_or_tip): Don't worry about file ownership
	and nonstrict locking when returning the default branch or head.
	The most conspicuous problem with the old code is that in the
	error case it would examine rstat.st_uid when it had not been